--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,20 @@
     animation: shimmer 2s infinite;
   }
 
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
   .shimmer {
     position: relative;
     overflow: hidden;
